--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@babel/cli": "^7.1.2",
     "express": "^4.16.4",
+    "express-graphql": "^0.6.12",
+    "graphql": "^14.0.2",
     "osc-js": "^1.2.2"
   },
   "scripts": {
