--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "osc": "^2.2.4"
   },
   "scripts": {
-    "build": "babel src -d lib",
-    "start": "node ./lib/index.js"
+    "build": "babel src -d dist",
+    "start": "node ./dist/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
