Including Casparcg-connection and INFO, to get status from non playing channels/layers

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "license": "MIT",
   "dependencies": {
     "@babel/cli": "^7.1.2",
+    "casparcg-connection": "^4.5.3",
     "express": "^4.16.4",
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.2",
-    "osc": "https://github.com/PieceMeta/osc.js/tarball/master"
+    "osc": "https://github.com/PieceMeta/osc.js/tarball/master",
+    "tslib": "^1.9.3"
   },
   "scripts": {
     "build": "babel src -d dist",
