Added babel-node debuging inside VS code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,20 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/dist/index.js"
+            "name": "Launch & Debug",
+            "program": "${workspaceFolder}/src/index.js",
+            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/babel-node",
+            "runtimeArgs": ["--nolazy"]
         },
         {
             "type": "node",
             "request": "launch",
-            "name": "Debug",
-            "program": "${workspaceFolder}/src/index.js",
-            "runtimeExecutable": "${workspaceFolder}/node_modules/@babel/node",
-            "runtimeArgs": ["--nolazy"]
-          }
+            "name": "Launch Dist Program",
+            "program": "${workspaceFolder}/dist/index.js"
+        }
     ]
 }
