feat: renamed getMediaFolderStructure.js to getFolderStructure.js, so it can be used for media, data, template etc.

--- a/casparcg.config
+++ b/casparcg.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <paths>
-    <media-path>C:\Users\casparcg\OneDrive - TV 2 DANMARK\billedinspiration</media-path>
+    <media-path>/</media-path>
     <log-path>log/</log-path>
     <data-path>data/</data-path>
     <template-path>template/</template-path>
