feat: Added filehound module for listing directories feat: update dirlist when files has changed

--- a/casparcg.config
+++ b/casparcg.config
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <paths>
-    <media-path>/</media-path>
+    <media-path>/users/kaol/temp</media-path>
     <log-path>log/</log-path>
     <data-path>data/</data-path>
     <template-path>template/</template-path>
-    <thumbnail-path>thumbnail/</thumbnail-path>
+    <thumbnail-path>/users/kaol/temp</thumbnail-path>
     <font-path>font/</font-path>
   </paths>
   <lock-clear-phrase>secret</lock-clear-phrase>
