--- a/casparcg.config
+++ b/casparcg.config
@@ -1,36 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <paths>
-    <media-path>/users/kaol/temp</media-path>
-    <log-path>log/</log-path>
-    <data-path>data/</data-path>
-    <template-path>template/</template-path>
-    <thumbnail-path>/users/kaol/temp</thumbnail-path>
-    <font-path>font/</font-path>
+    <media-path>C:\Users\casparcg\billedinspiration\online\</media-path>
+    <log-path>log\</log-path>
+    <data-path>C:\Users\casparcg\billedinspiration\data\</data-path>
+    <template-path>C:\Users\casparcg\billedinspiration\template</template-path>
+    <thumbnail-path>thumbnail\</thumbnail-path>
+    <font-path>font\</font-path>
   </paths>
   <lock-clear-phrase>secret</lock-clear-phrase>
   <channels>
-    <channel>
-      <video-mode>720p5000</video-mode>
-      <channel-layout>stereo</channel-layout>
-      <consumers>
-      	<newtek-ivga />
-      </consumers>
-    </channel>
+	<channel>
+	    <video-mode>1080i5000</video-mode>
+	    <consumers>
+ 		<decklink>
+		    <device>1</device>
+		    <embedded-audio>true</embedded-audio>
+		    <latency>default [normal|low|default]</latency>
+		    <keyer>external [external|internal|default|external_separate_device]</keyer>
+		    <key-only>false [true|false]</key-only>
+		    <buffer-depth>3 [1..]</buffer-depth>
+		    <key-device>device + 1 [1..]</key-device>
+		 </decklink>
+	      <newtek-ivga />
+	    </consumers>
+	  </channel>
+	<channel>
+	    <video-mode>1080i5000</video-mode>
+	    <consumers>
+ 		<decklink>
+		    <device>2 </device>
+		    <embedded-audio>false [true|false]</embedded-audio>
+		    <latency>default [normal|low|default]</latency>
+		    <keyer>external [external|internal|default|external_separate_device]</keyer>
+		    <key-only>false [true|false]</key-only>
+		    <buffer-depth>3 [1..]</buffer-depth>
+		    <key-device>device + 1 [1..]</key-device>
+		 </decklink>
+	    </consumers>
+	  </channel>
   </channels>
-
- <osc>
-   <default-port>6250</default-port>
-   <disable-send-to-amcp-clients>false</disable-send-to-amcp-clients>
-   <predefined-clients>
-     <predefined-client>
-       <address>127.0.0.1</address>
-       <port>5253</port>
-     </predefined-client>
-   </predefined-clients>
- </osc>
+<osc>
+  <default-port>6250</default-port>
+  <disable-send-to-amcp-clients>false [true|false]</disable-send-to-amcp-clients>
+  <predefined-clients>
+    <predefined-client>
+      <address>127.0.0.1</address>
+      <port>5253</port>
+    </predefined-client>
+    <predefined-client>
+      <address>192.168.0.117</address>
+      <port>5253</port>
+    </predefined-client>
+  </predefined-clients>
+</osc>
   <controllers>
-
     <tcp>
       <port>5250</port>
       <protocol>AMCP</protocol>
@@ -43,6 +67,12 @@
 </configuration>
 
 <!--
+<channel>
+	    <video-mode>1080p5000</video-mode>
+	    <consumers>
+	      <newtek-ivga />
+	    </consumers>
+	  </channel>
 <log-level>           info  [trace|debug|info|warning|error|fatal]</log-level>
 <log-categories>      communication  [calltrace|communication|calltrace,communication]</log-categories>
 <force-deinterlace>   false  [true|false]</force-deinterlace>
