--- a/casparcg.config
+++ b/casparcg.config
@@ -5,7 +5,7 @@
     <log-path>log\</log-path>
     <data-path>C:\Users\casparcg\billedinspiration\data\</data-path>
     <template-path>C:\Users\casparcg\billedinspiration\template</template-path>
-    <thumbnail-path>thumbnail\</thumbnail-path>
+    <thumbnail-path>C:\CasparCG Server\server\thumbnail</thumbnail-path>
     <font-path>font\</font-path>
   </paths>
   <lock-clear-phrase>secret</lock-clear-phrase>
