--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,12 @@
 {
-    "presets": ["@babel/preset-env"],
+    "presets": [
+        "@babel/preset-env",
+        "@babel/preset-typescript"
+    ],
+    "plugins": [
+        "@babel/proposal-class-properties",
+        "@babel/proposal-object-rest-spread"
+    ],
     "sourceMaps": "inline",
     "retainLines": true
 }
