--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "ccg-status-scanner",
   "version": "0.1.0",
   "description": "Scanner that holds the status of a CasperCG, by recieving OSC",
-  "main": "./src/index.js",
+  "main": "./src/index.ts",
   "author": "Kasper Olsson Hans (TV2 Denmark)",
   "license": "MIT",
   "dependencies": {
+    "@types/graphql": "^14.2.0",
     "apollo-server": "^2.5.0",
     "casparcg-connection": "^4.7.0",
     "chokidar": "^3.0.0",
@@ -17,7 +18,9 @@
     "xml-js": "^1.6.8"
   },
   "scripts": {
-    "build": "babel src -d dist",
+    "buildOLD": "babel src -d dist",
+    "build": "babel src --out-dir dist --extensions '.ts,.tsx'",
+    "typecheck": "tsc",
     "start": "node ./dist/index.js",
     "debug": "node --inspect ./dist/index.js",
     "build-linux": "yarn pkg -t node10-linux ./dist/index.js --output ./dist/CasparCG-state-scanner",
@@ -27,7 +30,10 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
+    "@babel/preset-typescript": "^7.3.3",
     "pkg": "^4.4.0"
   }
 }
