chore: added backslash to casparcg-config file template folder

--- a/casparcg.config
+++ b/casparcg.config
@@ -4,7 +4,7 @@
     <media-path>C:\Users\casparcg\billedinspiration\online\</media-path>
     <log-path>log\</log-path>
     <data-path>C:\Users\casparcg\billedinspiration\data\</data-path>
-    <template-path>C:\Users\casparcg\billedinspiration\template</template-path>
+    <template-path>C:\Users\casparcg\billedinspiration\template\</template-path>
     <thumbnail-path>C:\CasparCG Server\server\thumbnail</thumbnail-path>
     <font-path>font\</font-path>
   </paths>
