--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "filehound": "^1.17.0",
     "graphql": "^14.3.1",
     "http": "^0.0.0",
-    "osc": "https://github.com/PieceMeta/osc.js/tarball/master",
+    "osc": "https://github.com/olzzon/tv2-osc.js-no-serialport.git",
     "tslib": "^1.9.3",
     "xml-js": "^1.6.8"
   },
